--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,9 +11,12 @@ permissions:
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
 
+    - name: PHP Runner
+      uses: franzliedke/gh-action-php@0.3.0
+            
     steps:
     - uses: actions/checkout@v4
 
@@ -35,5 +38,5 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Run test suite
+     run: composer run-script test
